Refactor: 상품 재고 조회 API 분리
상품 재고 Entity 생성